tests/tests/snapshots/integration__run_file@stepper_factorial.gleam.snap
---
source: tests/tests/integration.rs
expression: "formatdoc!\n{\"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"}"
input_file: cli/tests/inputs/stepper_factorial.gleam
---
STDOUT

STDERR
