tests/tests/snapshots/integration__run_images@add_curve3.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/add_curve3.gleam
---
<svg width="100.0" height="100.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 0.5 0.5 L 100.5 0.5 L 100.5 100.5 L 0.5 100.5 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10.0" />
    <path d="M 20.5 50.5 C 20.5 50.5 80.5 50.5 80.5 50.5" fill="none" stroke="rgba(255, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10.0" />
  </g>
</svg>
